# SynthSeg

./: .gitignore  activate-venv.sh  pyproject.toml  requirements_container.txt
SynthSeg/: .gitignore  brain_generator.py  brain_generator_options.py  labels_to_image_model.py  logging_utils.py  metrics_model.py  mlflow_callback.py  mlflow_utils.py  model_inputs.py  option_types.py  option_utils.py  options_base.py  predict.py  predict_denoiser.py  predict_synthseg.py  sample_segmentation_pairs_d.py  segmentation_model.py  training.py  training_denoiser.py  training_group.py  training_options.py  training_qc.py  training_supervised.py  training_with_tfrecords.py  upsample_gaussian.py
SynthSeg/analysis/: analysis_types.py  contrast_analysis.py  freesurfer_tools.py  label_analysis.py  mpm_analysis.py  resample_label_image.py
container/: README.md  kernel.json  nvidia_tensorflow.def  synthseg_predict.def
ext/lab2im/: edit_tensors.py  edit_volumes.py  lab2im_model.py  layers.py  utils.py
ext/neuron/: callbacks.py  generators.py  layers.py  metrics.py  models.py  utils.py  vae_tools.py
python_env/: README.md  bootstrap_mamba.sh  environment.yml  environment_osx.yml
python_env/mamba/: README.md  (+1 more)
tests/: __init__.py  brain_image_seed43.npy  brain_label_seed43.npy  conftest.py  labels_to_image_model_seed43.pkl  test_brain_generator.py  test_contrast_analysis.py  test_labels_to_image_model.py  test_layers.py  test_model_inputs.py  test_options_base.py  test_random_seed.py  test_segmentation_model.py  test_training_with_tfrecords.py  test_upsampe_label_image.py
(+54 files in other folders)
